# cosmonaut-installer

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md
.github/workflows/: ci.yml  e2e.yml
crates/cosmonaut-engine/: Cargo.toml
crates/cosmonaut-engine/src/: bls.rs  bootc.rs  finalize.rs  format.rs  hostname.rs  lib.rs  luks.rs  mkfs.rs  mount.rs  partition.rs  probe.rs  runner.rs
crates/cosmonaut-engine/tests/: loopback.rs
crates/cosmonaut-engine/tests/common/: mod.rs
crates/cosmonaut-installer/: Cargo.toml
crates/cosmonaut-installer-cli/: Cargo.toml
crates/cosmonaut-installer-cli/src/: main.rs
crates/cosmonaut-installer-daemon/: Cargo.toml
crates/cosmonaut-installer-daemon/src/: main.rs  probe.rs  service.rs  wifi.rs
crates/cosmonaut-installer/src/: app.rs  branding.rs  daemon.rs  disks.rs  images_json.rs  main.rs  spec.rs
crates/cosmonaut-installer/src/pages/: confirm.rs  disk.rs  done.rs  encryption.rs  image.rs  layout.rs  mod.rs  progress.rs  welcome.rs  wifi.rs
crates/cosmonaut-installer/src/widgets/: disk_bar.rs  mod.rs
data/autostart/: dev.cosmonaut.Installer.desktop
data/dbus/: dev.cosmonaut.Installer1.conf  dev.cosmonaut.Installer1.service
data/polkit/: dev.cosmonaut.Installer1.policy
data/systemd/: dev.cosmonaut.Installer1.service
docs/: install-pipeline.md
tests/e2e/: run-e2e.sh
