[workspace]
resolver = "2"
members = [
    "crates/cosmonaut-installer",
    "crates/cosmonaut-installer-daemon",
    "crates/cosmonaut-installer-cli",
    "crates/cosmonaut-engine",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/RazorfinOS-org/cosmonaut-installer"
rust-version = "1.80"

[workspace.dependencies]
cosmonaut-engine = { path = "crates/cosmonaut-engine" }

# libcosmic pinned to the same commit cosmic-build-meta vendors for
# cosmic-settings et al. Sharing the rev means cargo2 in the BST sandbox
# reuses one cached source tree across all COSMIC apps.
libcosmic = { git = "https://github.com/pop-os/libcosmic.git", rev = "c423ad1bfc25057922406c687f2ddc75ead5ab67", default-features = false, features = ["winit", "tokio", "wgpu", "single-instance"] }

# Async + DBus
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "io-util", "sync", "signal", "time"] }
tokio-stream = { version = "0.1", default-features = false, features = ["io-util"] }
tokio-util = { version = "0.7", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
zvariant = { version = "5", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"

# Engine deps
nix = { version = "0.29", features = ["mount", "fs"] }
uuid = { version = "1", features = ["v4"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
