[package]
name = "cosmonaut-installer-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Headless driver for the cosmonaut-installer daemon"

[dependencies]
tokio = { workspace = true }
futures-util = { workspace = true }
zbus = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
