[package]
name = "cosmonaut-installer-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "DBus system service hosting the cosmonaut install engine"

[dependencies]
cosmonaut-engine = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
zbus = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
