[package]
name = "cosmonaut-installer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "libcosmic GUI for installing COSMIC bootc images"

[dependencies]
cosmonaut-engine = { workspace = true }
libcosmic = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
zbus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
