[package]
name = "cosmonaut-installer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "libcosmic GUI for installing COSMIC bootc images"

[dependencies]
cosmonaut-engine = { workspace = true }
libcosmic = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
zbus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = "0.3"
futures-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Wifi page (ported from cosmic-initial-setup, talks to NetworkManager).
# We vendor the subscription crate under `vendor/` so we can pin its
# iced_futures dep to the same libcosmic rev the rest of our workspace
# uses (see vendor/.../Cargo.toml for the rationale).
cosmic-settings-network-manager-subscription = { path = "../../vendor/cosmic-settings-network-manager-subscription" }
secure-string = "0.3"
eyre = "0.6"
